prog/1stPartyLibs/quirrel/quirrel/testData/diagnostics/compilation_errors/syntax_errors/invalid_type_name.nut
// EXPECT_ERROR: "Invalid type name"
function foo(x: UnknownType) {
    return x
}
